--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.1",
+    "@tailwindcss/vite": "^4.1.7",
     "@tinymce/tinymce-react": "^6.1.0",
     "appwrite": "^17.0.2",
     "html-react-parser": "^5.2.5",
@@ -18,7 +19,8 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
